# titan-ann

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE  carbin_deps.txt  issue.md  pyproject.toml  requirements.txt  setup.py
python/: CMakeLists.txt  setup.py
python/apps/: in-mem-dynamic.py  in-mem-static.py  insert-in-clustered-order.py
python/src/: __init__.py  _builder.py  _builder.pyi  _common.py  _disk_index.py  _dynamic_memory_index.py  _static_memory_index.py  diskann_bindings.cpp  tann_bindings.cc
python/tannpy/: tann_bindings.cc
tann/: BUILD.bazel  CMakeLists.txt  abstract_data_store.cc  abstract_data_store.h  abstract_graph_store.h  aligned_file_reader.h  ann_exception.cc  ann_exception.h  boost_dynamic_bitset_fwd.h  cached_io.h  common_includes.h  concurrent_queue.h  cosine_similarity.h  defaults.h  disk_utils.cc  disk_utils.h  distance.cc  distance.h  exceptions.h  filter_utils.cc  filter_utils.h  in_mem_data_store.cc  in_mem_data_store.h  in_mem_graph_store.cc  in_mem_graph_store.h  index.cc  index.h  linux_aligned_file_reader.cc  linux_aligned_file_reader.h  locking.h  logger.cc  logger.h  logger_impl.h  math_utils.cc  math_utils.h  memory_mapper.cc  memory_mapper.h  natural_number_map.cc  natural_number_map.h  natural_number_set.cc  (+21 more)
tann/common/: ann_exception.cc  args.h  boolean_set.h  compact_string.h  config.h  constants.h  cpu_info.h  defines.h  exception.h  hash_based_boolean_set.h  locking.h  logger.cc  logger.h  logger_impl.h  math_utils.cc  math_utils.h  mmap_manager.cc  natural_number_map.cc  natural_number_map.h  natural_number_set.cc  natural_number_set.h  property_set.h  shared_memory_allocator.cc  shared_memory_allocator.h  std_ostream_redirector.h  timer.h  types.h  utility.h  utils.cc  utils.h  vector_utility.h
tann/comparator/: primitive_comparator.h
tann/concurrent/: concurrent.cc  concurrent.h  concurrent_set.h  fine_grained_lock.h  lock_free.h  thread_pool.h
tann/config/: check.h
tann/core/: allocator.h  dataset.h  engine.cc  engine.h  error_code.h  index_core.cc  index_core.h  index_interface.h  index_option.h  io_option.h  labelset.h  neighbor_queue.h  query_context.h  query_result_set.h  search_context.h  search_query.h  search_result.h  serialize_option.h  statistics.h  types.h  vector_index.cc  vector_index.h  vector_set_io.cc  vector_set_io.h  vector_space.h  vector_store_option.h  work_space.h  work_space_pool.h  worker_space.h
tann/datasets/: bin_vector_io.cc  bin_vector_io.h  fvec_vector_io.cc  fvec_vector_io.h  tsv_vector_io.cc  tsv_vector_io.h
tann/diskann/: disk_utils.cc  disk_utils.h  filter_utils.cc  filter_utils.h  index.cc  index.h  parameters.h  partition.cc  partition.h  percentile_stats.h  pq.cc  pq_flash_index.cc  pq_flash_index.h  scratch.cc  scratch.h
tann/distance/: DistanceUtils.cc  DistanceUtils.h  InstructionUtils.cc  InstructionUtils.h  Kernel.cu  SIMDUtils.cc  SIMDUtils.h  cosine_similarity.h  distance.cc  distance.h  distance_factory.h  primitive_comparator.h  primitive_distance.cc  primitive_distance.h  utility.h
tann/flat/: flat_engine.cc  flat_engine.h  flat_index.cc  flat_index.h
tann/graph/: abstract_data_store.h  abstract_graph_store.h  aligned_file_reader.h  ann_exception.cc  bk_tree.h  cached_io.h  concurrent_queue.h  defaults.h  disk_utils.cc  disk_utils.h  distance.cc  dynamic_neighbors.cc  dynamic_neighbors.h  filter_utils.cc  filter_utils.h  in_mem_data_store.cc  in_mem_data_store.h  in_mem_graph_store.cc  index.cc  index.h  k_nearest_neighborhood_graph.h  kd_tree.h  linux_aligned_file_reader.cc  logger.cc  logger_impl.h  math_utils.cc  math_utils.h  memory_mapper.cc  natural_number_set.cc  neighbor.h  neighborhood_graph.cc  neighborhood_graph.h  partition.cc  partition.h  percentile_stats.h  pq.cc  pq.h  pq_flash_index.cc  pq_flash_index.h  relative_neighborhood_graph.h  (+6 more)
tann/hnsw/: hnsw_engine.cc  hnsw_engine.h  hnsw_index.cc  hnsw_index.h  hnsw_work_space.h  hnswalg.h  hnswlib.h  leveled_graph.cc  leveled_graph.h  scratch.h  visited_list_pool.h
tann/index/: constants.h  container.h  distance.cc  distance.h  dml_query.h  error.cc  error.h  hnswlib_index.cc  hnswlib_index.h  metric.h  option.h  query_container.h  search_query.h  tann_index.cc  tann_index.h  tann_index_config.h
tann/io/: aligned_file_reader.h  async_file_reader.cc  async_file_reader.h  cached_io.h  default_reader.cc  default_reader.h  disk_io.h  linux_aligned_file_reader.cc  linux_aligned_file_reader.h  memory_mapper.cc  memory_reader.h  txt_reader.cc  txt_reader.h  utility.h  vector_set_reader.cc  vector_set_reader.h  windows_aligned_file_reader.cc  windows_aligned_file_reader.h  xvec_reader.cc  xvec_reader.h
tann/ngt/: array_file.cc  array_file.h  capi.cc  clustering.h  command.cc  command.h  common.h  defines.h  graph.cc  graph.h  graph_optimizer.h  graph_reconstructor.h  index.cc  index.h  mmap_manager.cc  mmap_manager_defs.h  mmap_manager_impl.h  node.cc  node.h  object_repository.h  object_space.h  object_space_repository.h  optimizer.h  primitive_comparator.h  shared_memory_allocator.cc  shared_memory_allocator.h  thread.cc  thread.h  tree.cc  tree.h
tann/quantizer/: i_quantizer.cc  i_quantizer.h  opq_quantizer.h  pq_quantizer.h  quantizer_interface.h
tann/store/: abstract_data_store.cc  abstract_data_store.h  in_mem_data_store.cc  in_mem_data_store.h  mem_vector_store.cc  mem_vector_store.h  raw_vector.cc  raw_vector.h  vector_batch.h  vector_set.cc  vector_set.h
tann/utility/: ArgumentsParser.cc  ArgumentsParser.h  Base64Encode.cc  Base64Encode.h  CommonHelper.cc  CommonHelper.h  DefinitionList.h  SimpleIniReader.cc  SimpleIniReader.h  StringConvert.h  common.h  common_utils.cc  common_utils.h  heap.h  truth_set.cc  truth_set.h
tann/vamana/: CMakeLists.txt  abstract_data_store.h  abstract_graph_store.h  aligned_file_reader.h  ann_exception.cc  index.cc  (+42 more)
tests/: BUILD.bazel  CMakeLists.txt  build_disk_index.cc  build_memory_index.cc  build_stitched_index.cc  range_search_disk_index.cc  search_disk_index.cc  search_memory_index.cc  test_insert_deletes_consolidate.cc  test_streaming_scenario.cc
(+211 files in other folders)
