#
# Copyright 2023 The Turbo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#


load(
    "//:copts/configure_copts.bzl",
    "TURBO_DEFAULT_COPTS",
    "TURBO_DEFAULT_LINKOPTS",
    "TURBO_TEST_COPTS",
)

cc_binary(
    name = "build_disk_index",
    srcs = ["build_disk_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options"],
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "build_memory_index",
    srcs = ["build_memory_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options"],
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "build_stitched_index",
    srcs = ["build_stitched_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options"],
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "range_search_disk_index",
    srcs = ["range_search_disk_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"],
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "search_disk_index",
    srcs = ["search_disk_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "search_memory_index",
    srcs = ["search_memory_index.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "test_insert_deletes_consolidate",
    srcs = ["test_insert_deletes_consolidate.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "test_streaming_scenario",
    srcs = ["test_streaming_scenario.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "fvecs_to_bin",
    srcs = ["utils/fvecs_to_bin.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)


cc_binary(
    name = "fvecs_to_bvecs",
    srcs = ["utils/fvecs_to_bvecs.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "rand_data_gen",
    srcs = ["utils/rand_data_gen.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "float_bin_to_int8",
    srcs = ["utils/float_bin_to_int8.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "ivecs_to_bin",
    srcs = ["utils/ivecs_to_bin.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)
cc_binary(
    name = "count_bfs_levels",
    srcs = ["utils/count_bfs_levels.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "tsv_to_bin",
    srcs = ["utils/tsv_to_bin.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "bin_to_tsv",
    srcs = ["utils/bin_to_tsv.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "int8_to_float",
    srcs = ["utils/int8_to_float.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)

cc_binary(
    name = "int8_to_float_scale",
    srcs = ["utils/int8_to_float_scale.cc"],
    copts = TURBO_DEFAULT_COPTS,
    linkopts = TURBO_DEFAULT_LINKOPTS + ["-lboost_program_options", "-laio"] ,
    includes = ["@com_gottingen_turbo//turbo:turbo"],
    deps = ["@com_gottingen_turbo//turbo:turbo", "//thirdparty/mkl:mkl","//thirdparty/boost:boost", "//tann:tann"]
)