#
# Copyright 2023 The Tann Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

find_package(Boost REQUIRED)

turbo_cc_binary(
        NAME
        build_disk_index
        SRCS
        "build_disk_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        build_memory_index
        SRCS
        "build_memory_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        build_stitched_index
        SRCS
        "build_stitched_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        range_search_disk_index
        SRCS
        "range_search_disk_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        search_disk_index
        SRCS
        "search_disk_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        search_memory_index
        SRCS
        "search_memory_index.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        test_insert_deletes_consolidate
        SRCS
        "test_insert_deletes_consolidate.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        test_streaming_scenario
        SRCS
        "test_streaming_scenario.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        fvecs_to_bin
        SRCS
        "utils/fvecs_to_bin.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        fvecs_to_bvecs
        SRCS
        "utils/fvecs_to_bvecs.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        rand_data_gen
        SRCS
        "utils/rand_data_gen.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        float_bin_to_int8
        SRCS
        "utils/float_bin_to_int8.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        ivecs_to_bin
        SRCS
        "utils/ivecs_to_bin.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        count_bfs_levels
        SRCS
        "utils/count_bfs_levels.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        tsv_to_bin
        SRCS
        "utils/tsv_to_bin.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        bin_to_tsv
        SRCS
        "utils/bin_to_tsv.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        int8_to_float
        SRCS
        "utils/int8_to_float.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        int8_to_float_scale
        SRCS
        "utils/int8_to_float_scale.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        create_disk_layout
        SRCS
        "utils/create_disk_layout.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        compute_groundtruth
        SRCS
        "utils/compute_groundtruth.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        calculate_recall
        SRCS
        "utils/calculate_recall.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)
turbo_cc_binary(
        NAME
        generate_synthetic_labels
        SRCS
        "utils/generate_synthetic_labels.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        gen_random_slice
        SRCS
        "utils/gen_random_slice.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        generate_pq
        SRCS
        "utils/generate_pq.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        partition_with_ram_budget
        SRCS
        "utils/partition_with_ram_budget.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        simulate_aggregate_recall
        SRCS
        "utils/simulate_aggregate_recall.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        stats_label_data
        SRCS
        "utils/stats_label_data.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        uint8_to_float
        SRCS
        "utils/uint8_to_float.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)


turbo_cc_binary(
        NAME
        uint32_to_uint8
        SRCS
        "utils/uint32_to_uint8.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        vector_analysis
        SRCS
        "utils/vector_analysis.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        merge_shards
        SRCS
        "utils/merge_shards.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)

turbo_cc_binary(
        NAME
        partition_data
        SRCS
        "utils/partition_data.cc"
        COPTS
        ${TURBO_DEFAULT_COPTS}
        ${TURBO_RANDOM_RANDEN_COPTS}
        ${TURBO_SIMD_FLAGS}
        DEPS
        tann::tann
        ${TURBO_DYLINK}
        ${MKL_LIBRARIES}
        boost_program_options
)